force-app/main/default/objects/ContactRequest/ContactRequest.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>