force-app/main/default/objects/ContactRequest/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information</complianceGroup>
    <description>The first and last name of the customer requesting the contact request</description>
    <formula>Interaction__r.Account.FirstName + &quot; &quot; + Interaction__r.Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>