force-app/main/default/objects/ContactRequest/fields/Appointment_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Commitment__c</fullName>
    <complianceGroup>Source - Salesforce;Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Appointment commitment linked with contact request</description>
    <label>Appointment Commitment</label>
    <referenceTo>Appointment_Commitment__c</referenceTo>
    <relationshipLabel>Contact Requests</relationshipLabel>
    <relationshipName>Contact_Requests_del</relationshipName>
    <type>Lookup</type>
</CustomField>