force-app/main/default/objects/ContactRequest/fields/Appointment_date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_date_and_Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Date and time of the Appointment</description>
    <label>Appointment date and Time</label>
    <type>DateTime</type>
</CustomField>