force-app/main/default/objects/ContactRequest/fields/Channel_Booked__c.field-meta.xml
<CustomField>
    <fullName>Channel_Booked__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The channel used to make the contact request.</description>
    <label>Channel Booked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel_Booked</valueSetName>
    </valueSet>
</CustomField>