force-app/main/default/objects/ContactRequest/fields/Contact_Request_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Request_Auto_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Contact Request auto number field with the requested format, since name field is not editable.</description>
    <formula>&apos;CR-&apos; &amp;  Name</formula>
    <label>Contact Request Auto Number</label>
    <type>Text</type>
</CustomField>