force-app/main/default/objects/ContactRequest/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>TEXT(
  IF( ISPICKVAL( RequestReason , &apos;Other&apos;) , $CustomMetadata.Automated_Request_Purpose__mdt.Other.Duration__c , 
    IF( ISPICKVAL( RequestReason , &apos;Financial Wellbeing&apos;) ,  $CustomMetadata.Automated_Request_Purpose__mdt.Financial_Wellbeing.Duration__c ,
      15)
  )
) &amp; &apos; Minutes&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>