force-app/main/default/objects/ContactRequest/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <complianceGroup>Source - Salesforce;Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>If Appointment Time is not accepted within Escalated Time- Visual Indicator</description>
    <formula>IF((Appointment_date_and_Time__c - NOW()) &lt; 1 &amp;&amp; NOT(ISPICKVAL( Status , &apos;Accepted&apos;)),IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp;  $CustomMetadata.Escalated_Flag_Id__mdt.Alert_Flag_Id.Value__c 
, &apos;Alert&apos;, 30, 30), &apos;&apos;)</formula>
    <label>Escalated</label>
    <type>Text</type>
</CustomField>