force-app/main/default/objects/ContactRequest/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Interaction Id, linked with Contact request after coach accepts the contact request</description>
    <label>Interaction</label>
    <referenceTo>Interaction</referenceTo>
    <relationshipLabel>Contact Requests</relationshipLabel>
    <relationshipName>Contact_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>