force-app/main/default/objects/ContactRequest/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <complianceGroup>Integrity_Trusted;Source_Salesforce;Privacy_Non_Personal_Information</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the location where the appointment will happen.</description>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Contact Requests</relationshipLabel>
    <relationshipName>Contact_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>