force-app/main/default/objects/ContactRequest/listViews/All_Appointment_Requests.listView-meta.xml
<ListView>
    <fullName>All_Appointment_Requests</fullName>
    <columns>Name</columns>
    <columns>Account_Name__c</columns>
    <columns>RequestReason</columns>
    <columns>PreferredChannel</columns>
    <columns>Appointment_date_and_Time__c</columns>
    <columns>Status</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <label>All Appointment Requests</label>
    <sharedTo>
        <role>ANZ_Plus_Operations_Read_Only</role>
        <role>Coach</role>
        <role>Coach_Lead</role>
        <role>BOH_Coach_Lead</role>
    </sharedTo>
</ListView>