force-app/main/default/objects/ContactRequest/listViews/Unassigned_Appointment_Requests.listView-meta.xml
<ListView>
    <fullName>Unassigned_Appointment_Requests</fullName>
    <columns>Name</columns>
    <columns>Account_Name__c</columns>
    <columns>Id</columns>
    <columns>RequestReason</columns>
    <columns>PreferredChannel</columns>
    <columns>Appointment_date_and_Time__c</columns>
    <columns>Status</columns>
    <columns>Escalated__c</columns>
    <columns>Owner</columns>
    <filterScope>Queue</filterScope>
    <label>Unassigned Appointment Requests</label>
    <queue>Contact_Request</queue>
    <sharedTo>
        <role>Coach</role>
        <role>Coach_Lead</role>
    </sharedTo>
</ListView>